--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,7 @@
         }
     ],
     "require": {
-        "php": ">=7.0.0",
-        "normphp/config": "dev-master",
-        "normphp/helper": "dev-main"
+        "php": ">=7.0.0"
     },
     "repositories": {
     },
